@@ -1,2 +1,0 @@
-AnyObjectId[0df112a9887409a4ef57cb3af76d641a4daaf4ca] was removed in git history.
-Apache SVN contains full history.
